[package]
name = "carrier-crab"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
dotenvy = "0.15.7"
regex = "1.12.3"
